--- a/reviewservice-local.properties
+++ b/reviewservice-local.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=8085
+spring.application.name=reviewservice
 customer.search.url= http://localhost:8083/getcustomer/
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
