--- a/reviewservice-local.properties
+++ b/reviewservice-local.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/reviewdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Welcome123$
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
