--- a/customerservice-dev.properties
+++ b/customerservice-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://yshar62948dns.eastus2.cloudapp.azure.com:3306/customerdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://172.18.0.2:3306/customerdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
