--- a/orderingservice-dev.properties
+++ b/orderingservice-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.2.0.4:8082/orderdb
+spring.datasource.url=jdbc:mysql://172.18.0.2:8082/orderdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 
 
 server.port=8081
-restaurant.search.item.url= http://10.2.0.4:8080/item/id/
+restaurant.search.item.url= http://172.18.0.2:8080/item/id/
 
 
 #
