--- a/orderingservice-dev.properties
+++ b/orderingservice-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://172.18.0.2:3306/orderdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.18.0.2:3306/orderdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
