--- a/restaurantservice-local.properties
+++ b/restaurantservice-local.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://yshar62948dns.eastus2.cloudapp.azure.com:3306/restaurantdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Welcome123$
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+#eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+#eureka.client.fetch-registry=true
+#eureka.client.register-with-eureka=true
 spring.application.name=restaurantservice
 spring.output.ansi.enabled=ALWAYS
