--- a/restaurantservice-local.properties
+++ b/restaurantservice-local.properties
@@ -4,6 +4,7 @@ spring.datasource.password=Welcome123$
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 #eureka.client.fetch-registry=true
