--- a/restaurantservice-local.properties
+++ b/restaurantservice-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://lxwmf72956dns.eastus2.cloudapp.azure.com:3306/restaurantdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Welcome123$
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
